# whisper-transcription

./: CMakeLists.txt  LICENSE  index.html  main.js  package.json  pnpm-lock.yaml  preload.js  renderer.js  settings.json  transcriptionWorker.js
include/: model.h  operator.h
src/: CMakeLists.txt  Makefile  model.cpp  operator.cpp  operator_wrapper.cpp
src/common/: CMakeLists.txt
src/demo/: CMakeLists.txt  demo1.cpp
